--- a/Ascension/Ascension/strings.fr.resx
+++ b/Ascension/Ascension/strings.fr.resx
@@ -123,6 +123,9 @@
   <data name="BuyMystic" xml:space="preserve">
     <value>Acheter Mystic</value>
   </data>
+  <data name="ByAmount" xml:space="preserve">
+    <value>par </value>
+  </data>
   <data name="CenterRow" xml:space="preserve">
     <value>Rangée Centrale</value>
   </data>
@@ -144,8 +147,14 @@
   <data name="Honor" xml:space="preserve">
     <value>Honneur</value>
   </data>
+  <data name="Increment" xml:space="preserve">
+    <value>Incrément </value>
+  </data>
   <data name="KillCultist" xml:space="preserve">
     <value>Tuez Cultist</value>
+  </data>
+  <data name="MechanaRunes" xml:space="preserve">
+    <value>Mechana Runes</value>
   </data>
   <data name="OnTable" xml:space="preserve">
     <value>Sur Table</value>
