--- a/Ascension/Ascension/strings.resx
+++ b/Ascension/Ascension/strings.resx
@@ -123,6 +123,9 @@
   <data name="BuyMystic" xml:space="preserve">
     <value>Buy Mystic</value>
   </data>
+  <data name="ByAmount" xml:space="preserve">
+    <value> by </value>
+  </data>
   <data name="CenterRow" xml:space="preserve">
     <value>Center Row</value>
   </data>
@@ -144,8 +147,14 @@
   <data name="Honor" xml:space="preserve">
     <value>Honor</value>
   </data>
+  <data name="Increment" xml:space="preserve">
+    <value>Increment </value>
+  </data>
   <data name="KillCultist" xml:space="preserve">
     <value>Kill Cultist</value>
+  </data>
+  <data name="MechanaRunes" xml:space="preserve">
+    <value>Mechana Runes </value>
   </data>
   <data name="OnTable" xml:space="preserve">
     <value>On Table</value>
