--- a/Ascension/Ascension/strings_form3.fr.resx
+++ b/Ascension/Ascension/strings_form3.fr.resx
@@ -129,6 +129,10 @@
   <data name="Kill" xml:space="preserve">
     <value>Tuer</value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="packages" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>packages.config;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="Play" xml:space="preserve">
     <value>Jouer</value>
   </data>
