added butt tons of cards and fixed bugs

--- a/Ascension/Ascension/strings_form3.fr.resx
+++ b/Ascension/Ascension/strings_form3.fr.resx
@@ -151,4 +151,7 @@
   <data name="UseSelectedAbility" xml:space="preserve">
     <value>Utiliser la Capacité Choisie</value>
   </data>
+  <data name="Banish" xml:space="preserve">
+    <value>Bannir</value>
+  </data>
 </root>
