--- a/Ascension/Ascension/extraForms.fr.resx
+++ b/Ascension/Ascension/extraForms.fr.resx
@@ -117,41 +117,46 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Abilities" xml:space="preserve">
-    <value>Apacités</value>
+  <data name="BanishConstruct" xml:space="preserve">
+    <value>Voulez-vous bannir ce Construct à prendre un tour supplémentaire?</value>
   </data>
-  <data name="CardName" xml:space="preserve">
-    <value>Nom par défaut de la carte</value>
+  <data name="DoAction" xml:space="preserve">
+    <value>Avez-action</value>
   </data>
-  <data name="EndGameHonor" xml:space="preserve">
-    <value>Honneur de Fin de Jeu</value>
+  <data name="GameOver" xml:space="preserve">
+    <value>Jeu plus!</value>
   </data>
-  <data name="Kill" xml:space="preserve">
-    <value>Tuer</value>
+  <data name="No" xml:space="preserve">
+    <value>Aucun</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="packages" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>packages.config;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  <data name="OnePower" xml:space="preserve">
+    <value>1 Puissance</value>
   </data>
-  <data name="Play" xml:space="preserve">
-    <value>Jouer</value>
+  <data name="OneRune" xml:space="preserve">
+    <value>1 Rune</value>
   </data>
-  <data name="PleaseSelectCard" xml:space="preserve">
-    <value>S'il vous plaît Choisir une carte</value>
+  <data name="PickCard" xml:space="preserve">
+    <value>Choisissez la carte</value>
   </data>
-  <data name="PowerCost" xml:space="preserve">
-    <value>Coût Puissance</value>
+  <data name="Player1" xml:space="preserve">
+    <value>Joueur 1</value>
   </data>
-  <data name="Purchase" xml:space="preserve">
-    <value>Acheter</value>
+  <data name="Player2" xml:space="preserve">
+    <value>Joueur 2</value>
   </data>
-  <data name="RuneCost" xml:space="preserve">
-    <value>Coût Rune</value>
+  <data name="WantToDo" xml:space="preserve">
+    <value>Voulez-vous le faire?</value>
   </data>
-  <data name="UseSelectedAbility" xml:space="preserve">
-    <value>Utiliser la Capacité Choisie</value>
+  <data name="Yes" xml:space="preserve">
+    <value>Oui</value>
   </data>
-  <data name="Banish" xml:space="preserve">
-    <value>Bannir</value>
+  <data name="YggdrasilLabel" xml:space="preserve">
+    <value>Vous pouvez passer 4 runes pour gagner 3 honneur</value>
+  </data>
+  <data name="YggdrasilNo" xml:space="preserve">
+    <value>Non merci</value>
+  </data>
+  <data name="YggdrasilSpend" xml:space="preserve">
+    <value>Passez 4 runes</value>
   </data>
 </root>
