--- a/Ascension/Ascension/extraForms.resx
+++ b/Ascension/Ascension/extraForms.resx
@@ -144,6 +144,12 @@
   <data name="Player2" xml:space="preserve">
     <value>Player 2</value>
   </data>
+  <data name="Player3" xml:space="preserve">
+    <value>Player 3</value>
+  </data>
+  <data name="Player4" xml:space="preserve">
+    <value>Player 4</value>
+  </data>
   <data name="WantToDo" xml:space="preserve">
     <value>Do you want to do this?</value>
   </data>
